# f1-telemetry-physics-lab

./: .gitignore  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LICENSE  NEXT_STEPS.md  README.md  UPGRADE_SUMMARY.md  check_dataclass_access.py  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
app/_archived_pages/: __init__.py  exports.py  race_pace.py  style_profile.py
app/assets/: styles.css  theme.py
app/components/: __init__.py  event_selector.py  insight_summary.py  kpi_cards.py  lap_selector.py  session_header.py
docs/: methodology.md
src/f1telemetry/: __init__.py  alignment.py  braking_zones.py  cli.py  config.py  corners.py  data_loader.py  delta_decomp.py  gg_diagram.py  metrics.py  minisectors.py  multilap.py  physics.py  race_pace.py  report.py  style_profile.py  viz.py
tests/: __init__.py  test_alignment.py  test_braking_zones.py  test_metrics.py  test_physics.py  test_race_pace.py  test_style_profile.py
