[tool.poetry]
name = "f1telemetry"
version = "0.1.0"
description = "F1 Telemetry Physics Lab: Driver & Car Behavior Explorer"
authors = ["João Pedro Cunha <joao@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "f1telemetry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastf1 = "^3.3.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scipy = "^1.10.0"
plotly = "^5.18.0"
streamlit = "^1.30.0"
matplotlib = "^3.7.0"
Jinja2 = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
black = "^23.12.0"
ruff = "^0.1.8"
pandas-stubs = "^2.0.0"

[tool.poetry.scripts]
f1telemetry = "f1telemetry.cli:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
